headscale/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-ui
spec:
  selector:
    matchLabels:
      app: headscale-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: headscale-ui
    spec:
      containers:
        - name: headscale-ui
          image: ghcr.io/gurucomputing/headscale-ui:2025.08.23@sha256:d86943ae41059367f930c9794f7eddaf321823336184a3b8e1a08e9a4baac870
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
