headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "http-01-issuer"

spec:
  rules:
    - host: headscale.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: headscale
                port:
                  name: http
          - pathType: Prefix
            path: "/web"
            backend:
              service:
                name: headscale-ui
                port:
                  name: http

  tls:
    - hosts:
        - headscale.kentaro1043.com
      secretName: headscale-tls
